# sem-v55-train

./: .dockerignore  .gitignore  AGENTS.md  ANALYSIS_CG_SOLVER.md  CLAUDE.md  DIAGNOSIS_NAN_LOSS.md  Dockerfile  GEMINI.md  GRADIENT_CHECKPOINTING_FIX.md  HYPERPARAMETER_COMPARISON.md  LOCAL_MEMORY_BOOTSTRAP.md  OPTIMIZER_TUNING_SUMMARY.md  PRECISION_PLUGIN_SUMMARY.md  PROFILE_REPORT.md  RESEARCH_ARCHITECTURE_TOPOLOGY.md  RESEARCH_CUTTING_EDGE.md  RESEARCH_LANGUAGE_OPTIMIZATION.md  RESEARCH_SILICON_OPTIMIZATION.md  RESEARCH_THEORETICAL_PROOFS.md  SEM_V55_P0_IMPLEMENTATION_ISSUES.md  SEOP_FIX_32_LOSS_DIVERGENCE.md  SEOP_FIX_34_SUMMARY.md  THEOREMS.md  TODO.md  analyze_loss_components.py  check_hf_logs.py  check_hf_logs_large.py  check_hf_logs_simple.py  check_hf_logs_tail.py  check_job.py  check_jobs.py  check_jobs_status.py  check_last_log.py  check_status.py  check_status_v2.py  check_status_v3.py  cloud_train.sh  debug_data_pipeline.py  debug_profile.py  detect_progress.py  (+54 more)
configs/: AGENTS.md  a100_optimized.yaml  a10g_speed.yaml  cloud_a10g.yaml  cloud_fast.yaml  default.yaml  edge.yaml  h100_max.yaml  l40s_full.yaml  max_aggression.yaml  rtx3060_max.yaml  test.yaml  test_real_data.yaml  training.yaml  v8_test.yaml  xpu_optimized.yaml
docs/: architecture_audit_v55.md
lean4/: AGENTS.md  SEM.lean  lakefile.lean
sem/: AGENTS.md  __init__.py  config.py  generate.py  model.py  model_v8.py  train.py
sem_v55_lean_crystal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sweep/: AGENTS.md  hyperparam_sweep.py  nas_search.py
tests/: AGENTS.md  test_born.py  test_mhc.py  (+11 more)
(+79 files in other folders)
