[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sem-v55-lean-crystal"
version = "5.5.0"
description = "Signal-Entropic Model V5.5 - Lean Crystal Architecture"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "matplotlib",
]
training = [
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "transformers>=4.36.0",
    "tqdm>=4.66.0",
]
cuda = [
    "triton>=2.1.0",
]
tracking = [
    "wandb>=0.16.0",
]

[tool.setuptools.packages.find]
include = ["sem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
